# rlcard-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/conf/: Cargo.toml
crates/env/src/: lib.rs
