[workspace]
resolver = "2"
members = [ "crates/bin",
    "crates/conf",
    "crates/env",
    "crates/infra",
    "crates/logger",
    "crates/utils"
]

[profile.dev]
opt-level = 0                  # 完全禁用优化
debug = 2                      # 最大调试信息
split-debuginfo = "unpacked"   # 最佳调试体验
incremental = true             # 增量编译
debug-assertions = true        # 开发断言
panic = "unwind"               # 完整堆栈回溯
overflow-checks = true         # 整数溢出检查
codegen-units = 256            # 最大并行编译

[profile.release]
opt-level = 3                  # 最大优化
lto = "fat"                    # 全程序LTO
codegen-units = 1              # 单编译单元
panic = "abort"                # 最小二进制
strip = false                   # 去除符号
debug = false                  # 无调试信息
overflow-checks = false        # 禁用溢出检查

[profile.test]
opt-level = 1                  # 适度优化
debug = 2                      # 保留调试信息
#panic = "unwind"               # 捕获panic
incremental = true             # 增量编译
codegen-units = 16             # 较快编译

[profile.bench]
opt-level = 3                  # 最大优化
lto = "thin"                   # 平衡LTO
codegen-units = 1              # 单编译单元
#panic = "abort"                # 同生产
debug = false                  # 无调试信息
strip = false                   # 去除符号

#[profile.doc]
#opt-level = 0                  # 快速文档生成
#incremental = true             # 增量文档构建

#[env]
#RUSTFLAGS = "-C target-cpu=native -C embed-bitcode=yes"
#CARGO_PROFILE_RELEASE_CODEGEN_UNITS = "1"
#RUSTC_WRAPPER = "sccache"
#CARGO_PROFILE_RELEASE_LTO = "fat"
#CARGO_INCREMENTAL = "0"        # 发布禁用增量

[profile.dev.package."*"]
opt-level = 0                  # 依赖也禁用优化
incremental = true             # 依赖也启用增量


[workspace.metadata]
min_rust_version = "1.75.0"    # 最低工具链要求
